# vpnhide

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  README.ru.md  pyproject.toml  update-version.sh
app/: build.gradle.kts
changelog.d/: 20260419000001-dashboard-now-splits-issues-into-errors.toml  20260419000002-debug-logging-toggle-in-diagnostics-off.toml  20260419000003-expand-russian-apps-filter-youla-delivery.toml  20260419000004-help-text-on-protection-screens-tun.toml  20260419000005-dashboard-now-shows-a-consistent-version.toml  20260419000006-app-hiding-marking-the-same-app.toml  20260419000007-protection-toolbar-the-filter-icon-indicator.toml  20260419000008-dev-builds-of-the-app-no.toml  20260419200526-changelog-entries-now-live-as-per.toml  20260419204102-diagnose-wrong-variant-kmod-installs-dashboard.toml  README.md  added-align-native-cdylib-load-segments-on-f3b0.md  added-expanded-russian-app-detection-anixart-epn-6b78.md  added-lsposed-install-time-smoke-check-on-ba36.md  added-multi-profile-support-vpn-hide-now-2cb3.md  changed-debug-logging-toggle-now-also-enables-5e3d.md  fixed-catch-tunnels-renamed-to-the-kernel-d126.md  fixed-dashboard-vpn-active-detection-now-matches-5f3a.md  fixed-kmod-active-overrides-unsupported-708a.md  fixed-kmod-stop-hanging-rtm-getlink-dumps-171a.md  fixed-native-diagnostics-now-recognize-utun-l2tp-5a82.md  fixed-notification-time-increased-to-make-it-fc9a.md  (+4 more)
docs/: changelog.md  (+3 more)
lsposed/native/: Cargo.toml  build.rs
lsposed/native/src/: lib.rs
(+98 files in other folders)
