[package]
name = "vpnhide_checks"
version = "0.7.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
name = "vpnhide_checks"
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.29"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
panic = "abort"
